--- a/libs/essentials/ui-library/src/lib/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/libs/essentials/ui-library/src/lib/layouts/dashboard-layout/dashboard-layout.component.html
@@ -1,12 +1,14 @@
 <div class="min-h-screen bg-gray-100">
-    <div class="container mx-auto p-4">
-      <!-- Your content goes here -->
-      <router-outlet></router-outlet>
-    </div>
-    <footer class="bg-gray-800 text-white py-4">
-      <div class="container mx-auto">
-        <!-- Your footer content goes here -->
-        some footer here
-      </div>
-    </footer>
+  <div class="container mx-auto p-4 flex flex-col min-h-full">
+    <!-- Your content goes here -->
+    <router-outlet></router-outlet>
+    
   </div>
+  <footer class="bg-gray-800 text-white py-4 fixed bottom-0 w-full">
+    <div class="container mx-auto">
+      <!-- Your footer content goes here -->
+      @factoryplus
+    </div>
+  </footer>
+  </div>
+  
